--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="nav">
             <h2><i class="fa-solid fa-clipboard-check"></i>To-do List</h2>
-            <div class="user-input">
+            <div class="user_input">
                 <input type="text"><button onclick="addItem()">Submit</button>
             </div>
         </div>
