--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav">
             <h2><i class="fa-solid fa-clipboard-check"></i>To-do List</h2>
             <div class="user_input">
-                <input type="text"><button onclick="addItem()">Submit</button>
+                <input id="input" type="text"><button onclick="addItem()">Submit</button>
             </div>
         </div>
     </div>
